[package]
name = "lambda-test"
version = "0.1.0"
authors = ["Shane Lillie <ignignokterr@gmail.com>"]
edition = "2018"

[[bin]]
name = "bootstrap"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
lambda = { git = "https://github.com/awslabs/aws-lambda-rust-runtime/", branch = "master" }
log = "0.4"
rusoto_core = "0.43"
rusoto_dynamodb = "0.43"
rusoto_s3 = "0.43"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
simple_logger = "1.6"
tokio = { version = "0.2", features = ["full"] }
